tests/baselines/reference/parserForStatement1.d.errors.txt
==== tests/cases/compiler/parserForStatement1.d.ts (1 errors) ====
    for (;;) {
    ~~~
!!! parserForStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
    }